--- a/netlify.toml
+++ b/netlify.toml
@@ -1,19 +1,14 @@
+# Configurações de build para a Netlify
+
 [build]
-  command = "npm install && npm run build"
+  # Comando para construir o site
+  command = "yarn build"
+  # Diretório onde os arquivos do site construído são salvos
   publish = "dist"
-  base = "/"
-  ignore = "false"  # Never skip build
-  force = "true"    # Force build even if no changes detected
 
-[build.environment]
-  NODE_VERSION = "18"
-  CI = "true"       # Ensure we're in CI mode
-  NETLIFY_BUILD_SKIP = "false"  # Never skip build
-
-[build.processing]
-  skip_processing = false  # Ensure processing is not skipped
-
-[dev]
-  command = "vite"
-  port = 3000
-  publish = "dist"
+# Regra de redirecionamento para Single Page Applications (SPA)
+# Isso garante que o roteamento do lado do cliente (React Router) funcione corretamente.
+[[redirects]]
+  from = "/*"
+  to = "/index.html"
+  status = 200
