--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,10 @@
 [build]
-  command = "yarn build"
+  command = "npm run build"
   publish = "dist"
+
+[build.environment]
+  NODE_VERSION = "20"
+  NPM_FLAGS = "--legacy-peer-deps"
 
 [[redirects]]
   from = "/*"
