--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vite-react-typescript-starter",
+  "name": "motoristai",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -42,5 +42,13 @@
     "typescript-eslint": "^7.15.0",
     "vite": "^5.3.1",
     "vite-plugin-pwa": "^0.20.0"
+  },
+  "overrides": {
+    "eslint-plugin-react-hooks": {
+      "eslint": "^9.5.0"
+    },
+    "eslint-plugin-react-refresh": {
+      "eslint": "^9.5.0"
+    }
   }
 }
