--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@faker-js/faker": "^8.4.1",
+    "@supabase/supabase-js": "^2.90.1",
     "axios": "^1.7.2",
     "date-fns": "^3.6.0",
     "echarts": "^5.5.0",
