--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@capacitor/android": "^8.0.0",
+    "@capacitor/cli": "^8.0.0",
+    "@capacitor/core": "^8.0.0",
     "@faker-js/faker": "^8.4.1",
     "@supabase/supabase-js": "^2.90.1",
     "axios": "^1.7.2",
